# socksmaster

./: LICENSE  README.md  socksmaster.cabal
Src/: Config.hs  Main.hs  SocketTable.hs
